--- a/Stream_two.html
+++ b/Stream_two.html
@@ -9,7 +9,7 @@
 		<body>
 			<nav>
 				<ul>
-					<li><a href="Stream_one.html">Stream one</a></li>
+					<li><a href="index.html.html">Stream one</a></li>
 					<li><a href="Stream_two.html">Stream two</a></li>
 					<li><a href="Stream_three.html">Stream three</a></li>
 				</ul>
